Java version of Graph corrections